2005-11-10  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core/SystemAssemblyService.cs: Added method
	  for getting the full name of an assembly.

2005-11-09  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core.AddIns.Setup/AddinSetupInfo.cs:
	* MonoDevelop.Core.AddIns.Setup/AddinDependency.cs:
	* MonoDevelop.Core.AddIns.Setup/SetupService.cs:
	* MonoDevelop.Core.AddIns.Setup/NativeDependency.cs:
	* MonoDevelop.Core.AddIns.Setup/PackageDependency.cs
	* MonoDevelop.Core.AddIns.Setup/AddinPackage.cs: Added support
	for installing add-ins in the user's home directory.
	
2005-11-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core.AddIns.Setup/SetupTool.cs: Fix warning.

2005-10-28  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/AssemblyLoader.cs: Simplified the
	assembly loader check. The only conflictive situation is when
	trying to load two versions of gtk#. This can't happen with
	gtk# 2.4 and 2.6 since they are not side-by-side installable.

2005-10-20  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/AddIn.cs: the Import element may
	reference files as well as assemblies, so don't crash if
	the assembly attribute is missing.

2005-10-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.AddIns.Setup/RepositoryRecord.cs: Don't
	use DateTime.MinValue since the serializer may have trouble
	with it in some timezones

2005-10-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Gui.mdp: Added references.
	
	* MonoDevelop.Core.Properties/IProperties.cs:
	* MonoDevelop.Core.Properties/DefaultProperties.cs:
	Added GetProperty overloads for DateTime and TimeSpan.

	* MonoDevelop.Core.AddIns.Setup/RepositoryRecord.cs: Properly
	set repo name when it has been updated.
	
	* MonoDevelop.Core.AddIns.Setup/SetupService.cs: Several fixes
	in repository registration.
	
	* MonoDevelop.Core.AddIns.Setup/AddinInfo.cs: Generate better
	names for addin reference elements.
	